--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
@@ -21,9 +21,7 @@
 			font-weight: bold;
 			color: red;
 		}
-		.field-validation-error {
-			color: red;
-		}
+		
 	</style>
 
 	<script src="~/Scripts/jquery-1.10.2.min.js"></script>
@@ -93,21 +91,21 @@
 								<div class="row bs-wizard">
 									<div class="col-md-4 bs-wizard-step complete">
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="@Url.Action("BindingDataPersonalDetails", "Account")">1</a>
+										<a class="bs-wizard-dot" href="#">1</a>
 										<div class="text-center bs-wizard-stepnum marl-55">Personal</div>
 									</div>
 
 									<div class="col-md-4 bs-wizard-step active">
 
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="@Url.Action("PersonalDetails", "Account")">2</a>
+										<a class="bs-wizard-dot" href="#">2</a>
 										<div class="text-center bs-wizard-stepnum">Contact</div>
 									</div>
 
 									<div class="col-md-4 bs-wizard-step disabled">
 
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="/Account/ContactDetails">3</a>
+										<a class="bs-wizard-dot" href="#">3</a>
 										<div class="text-center bs-wizard-stepnum marr-60">Account</div>
 									</div>
 								</div>
@@ -123,44 +121,44 @@
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.Address, new { @class = "requiredA" })
 								@Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.Address)
+								@Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
 							</div>
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.Country, new { @class = "requiredA" })
 								@Html.DropDownList("Country", new SelectList(ViewBag.CountryList, "Id", "Name", ViewBag.SelectedCountry), "Select", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.Country)
+								@Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.State, new { @class = "requiredA" })
 								@Html.DropDownList("State", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "Name", ViewBag.SelectedState), "Select State", new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.State)
+								@Html.ValidationMessageFor(m => m.State, "", new { @class = "text-danger" })
 							</div>
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.City, new { @class = "requiredA" })
 								@*@Html.DropDownList("City", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "Name", @ViewBag.SelectedCity), "Select City", new { style = "width: 150px" })*@
 								@Html.TextBoxFor(m => m.City, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.City)
+								@Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.ZipCode, new { @class = "requiredA" })
 								@Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.ZipCode)
+								@Html.ValidationMessageFor(m => m.ZipCode, "", new { @class = "text-danger" })
 							</div>
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.HomePhone, new { @class = "requiredA" })
 								@Html.TextBoxFor(m => m.HomePhone, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.HomePhone)
+								@Html.ValidationMessageFor(m => m.HomePhone, "", new { @class = "text-danger" })
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.CellPhone)
 								@Html.TextBoxFor(m => m.CellPhone, new { @class = "form-control" })
-								@Html.ValidationMessageFor(m => m.CellPhone)
+								@Html.ValidationMessageFor(m => m.CellPhone, "", new { @class = "text-danger" })
 							</div>
 
 						</div>
