--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
@@ -1,29 +1,39 @@
-﻿@model Chinmaya.Registration.UI.Models.ForgotPasswordViewModel
+﻿@using Chinmaya.Registration.Models
+@model LoginViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+	ViewBag.Title = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
+@*<h2>@ViewBag.Title.</h2>*@
+<div class="login-logo">
+	<img src="~/Content/img/login-logo.png" alt="logo" class="center-block" />
+</div>
+<div class="login-box">
+	<div id="forgotPassword">
+		<div class="login_heading">Forgot Password</div>
+		@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+		{
+			@Html.AntiForgeryToken()
+		<label>Enter your email</label>
+			@*<hr />*@
+			@Html.ValidationSummary("", new { @class = "text-danger" })
+			<div class="form-group">
+				@*@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+					<div class="col-md-10">
+						@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+					</div>*@
+				@*<label>Email</label>*@
+				@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocomplete = "off" })
+			</div>
+			<div class="form-group">
+				<div class="col-md-offset-2 col-md-10">
+					<input type="submit" class="btn btn-success" value="Submit" />
+				</div>
+			</div>
+		}
+		</div>
+	</div>
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+		@section Scripts {
+			@Scripts.Render("~/bundles/jqueryval")
+		}
