#1. Forgot Password Functionality is finished #2. New Layout page created for non-login pages #3. Reset Password Confirmation page added and can useful for both forgot password and reset password pages

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ForgotPassword.cshtml
@@ -1,92 +1,64 @@
 ﻿@model Chinmaya.Registration.Models.ForgotPasswordModel
-@{
-    Layout = "";
-}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Welcome to Chinmaya Mission</title>
-    @Styles.Render("~/Content/css")
-</head>
-<body class="theme_bg">
-    <div class="login-logo">
-        <img src="~/Content/img/login-logo.png" alt="logo" class="center-block" />
-    </div>
-    <div class="login-box">
-        <div id="login">
-            <div class="login_heading">Forgot Password</div>
-            <div id="forgotPasswordForm">
-                <h4>Enter your email.</h4>
-                <hr />
-                <div class="form-group">
-                    <label for="Email" class="col-md-2 control-label">Email</label>
-                    <div class="col-md-10">
-                        <input type="text" id="Email" class="form-control" required />
-                        <label class="emailError" style="color:red; display:none">Invalid Email Address</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <button id="forgotPassword" class="btn btn-default">Email Link</button>
-                    </div>
-                </div>
-            </div>
-            <div id="emailSent" style="display:none">
-                <p>
-                    Reset password link has been sent to mail id
-                </p>
-            </div>
+@{ 
+    Layout = "../Shared/_LayoutPageOpen.cshtml";
+}
+<div class="col-md-12"><div class="login_heading">Forgot Password</div></div>
+<div class="col-md-12 p-0" id="forgotPasswordForm">
+        <label for="Email" class="col-md-2 control-label">Email</label>
+        <div class="col-md-12">
+            <input type="text" id="Email" class="form-control" required />
+            <label class="emailError" style="color:red; display:none">Invalid Email Address</label>
+        </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button id="forgotPassword" class="btn btn-default">Email Link</button>
         </div>
     </div>
-    <div class="copyright">New to Chinmaya Mission? Please register for programs/events @Html.ActionLink("here", "Registration", "Account", new { area = "" }, new { @style = "color:red;" }).</div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    <script type="text/javascript">
-		function OnSuccess(response) {
-		    if (typeof (response.Message) !== 'undefined') {
-		        if (response.IsSuccess) {
-		            toastr.success(response.Message, "Forgot Password", { timeOut: 3000 });
-		            $("#forgotPasswordForm").hide();
-		            $("#emailSent").show();
-		        } else {
-		            toastr.error(response.Message, "Forgot Password");
-		            $("#Email").val('');
-		        }
+</div>
+<div id="emailSent" style="display:none">
+    <p>
+        Reset password link has been sent to mail id
+    </p>
+</div>
+<script type="text/javascript">
+	function OnSuccess(response) {
+		if (typeof (response.Message) !== 'undefined') {
+		    if (response.IsSuccess) {
+		        toastr.success(response.Message, "Forgot Password", { timeOut: 3000 });
+		        $("#forgotPasswordForm").hide();
+		        $("#emailSent").show();
+		    } else {
+		        toastr.error(response.Message, "Forgot Password");
+		        $("#Email").val('');
 		    }
 		}
-		$(function () {
-		    $("#forgotPassword").on("click", function () {
-		        var email = $("#Email").val();
-		        if (email == "" || email == null) {
-		            $(".emailError").show();
-		            return;
-		        } else {
-		            $(".emailError").hide();
-		        }
-		        var resetModel = {
-		            Email: $("#Email").val()
-		        };
+	}
+	$(function () {
+		$("#forgotPassword").on("click", function () {
+		    var email = $("#Email").val();
+		    if (email == "" || email == null) {
+		        $(".emailError").show();
+		        return;
+		    } else {
+		        $(".emailError").hide();
+		    }
+		    var resetModel = {
+		        Email: $("#Email").val()
+		    };
 
-		        $.ajax({
-		            url: "/Account/ForgotPassword/",
-		            method: "POST",
-		            contentType: "application/json; charset=utf-8",
-		            data: JSON.stringify(resetModel),
-		            success: OnSuccess,
-		            error: function (err) {
-		                console.log(err);
-		            }
-		        });
+		    $.ajax({
+		        url: "/Account/ForgotPassword/",
+		        method: "POST",
+		        contentType: "application/json; charset=utf-8",
+		        data: JSON.stringify(resetModel),
+		        success: OnSuccess,
+		        error: function (err) {
+		            console.log(err);
+		        }
 		    });
 		});
-    </script>
-
-</body>
-</html>
+		});
+</script>
 
 
