--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Chinmaya.Registration.Models.ToastModel
+@{
+    Layout = "../Shared/_LayoutPageOpen.cshtml";
     ViewBag.Title = "Reset password confirmation";
 }
 
@@ -7,6 +9,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        @Model.Message Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
