--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Chinmaya.Registration.Models.AccountDetails
-
+@using Chinmaya.Registration.Models
 @{
 	ViewBag.Title = "AccountDetails";
 	Layout = "";
@@ -41,6 +41,8 @@
 		});
 
 	}
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
 </head>
 
 <body class="theme_bg">
@@ -161,11 +163,14 @@
 
 </body>
 </html>
-@section Scripts {
-	@Scripts.Render("~/bundles/jqueryval")
-	@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-		<script lang="ja" type="text/javascript">
-			PostData();
-		</script>*@
+
+@if(ViewBag.Toast != null)
+{
+    ToastModel tModel = ViewBag.Toast as ToastModel;
+    <script>
+        var valid = "@tModel.IsSuccess" == "True" ? true : false;
+        var message = "@tModel.Message";
+        toastr.error(message);
+    </script>
 }
 
