--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Event.cshtml
@@ -239,7 +239,7 @@
 		}
 	</div>
 	
-	<script src="~/Scripts/popper.min.js"></script>
+	<script src="~/Scripts/popper.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="~/Scripts/bootstrap.min.js"></script>
 	<script>
